<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    tools:context="expressapp.com.MainActivity" >
     <!--主界面的设计-->
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/tab_black_bg"
        android:gravity="center|center_vertical"
        android:text="@string/appTitle"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="80dp" />

    <LinearLayout
        android:id="@+id/appCompanyLinear"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/appCompanyImage"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:gravity="center|center_vertical"
            android:src="@drawable/expresscompany" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/expressCompany"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:hint="@string/chooseIntr"
                    android:textColor="#585858"
                    android:background="@null"
                    android:textSize="22sp" />

                <ImageView
                    android:id="@+id/companyImg"
                    android:layout_width="40dp"
                    android:layout_height="45dp"
                    android:background="@drawable/night_set_unfold"
                    android:gravity="center|center_vertical"
                    android:textColor="#262626"
                    android:textSize="22sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="#555555" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/expressNumberImage"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:gravity="center|center_vertical"
            android:src="@drawable/expressnumber" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/expressListNumber"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:hint="@string/inputList"
                    android:textColor="#585858"
                    android:background="@null"
                    style="?android:attr/textViewStyle"
                    android:textSize="22sp" />

                <ImageView
                    android:id="@+id/numberScan"
                    android:layout_width="40dp"
                    android:layout_height="45dp"
                    android:contentDescription="@string/scanDescript"
                    android:gravity="center|center_vertical"
                    android:src="@drawable/scanpicture" >
                </ImageView>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="#555555" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="25dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:orientation="horizontal"
        android:gravity="center"
        >
    <Button
        android:id="@+id/btnImportData"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="导入" />
    <Button
        android:id="@+id/searchBtn"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:text="@string/searchText"
        android:layout_marginLeft="20dp"
        android:textSize="24sp"
        android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>